# aeroguard-phm

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  REPRODUCIBILITY.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
artifacts/aerokan_phm_critical_gate/: cascade_metadata.json  maintenance_policy.pkl  uncertainty_model.pkl
artifacts/final_release/: frozen_system_manifest.json  source_artifact_manifest.json
configs/: aerokan_rul_corrector.yaml  critical_gate_aerokan_corrector.yaml  fd001_alert_generalization.yaml  fd001_anomaly_calibration.yaml  fd001_baseline.yaml  fd001_health_anomaly.yaml  maintenance_safety_policy_refinement.yaml  multidomain_deep_rul.yaml  multidomain_phm.yaml  multidomain_rul_uncertainty.yaml  multidomain_temporal_optimization.yaml  physics_guided_temporal_rul.yaml  physics_guided_temporal_rul_refinement.yaml  selective_aerokan_safety_corrector.yaml
dashboard/: app.py
docs/: aeroguard_phm_final_report.md  architecture.md  references.md
docs/archive/: README_before_detailed_release.md
docs/assets/: README_IMAGE_MAPPING.md
examples/: api_request.json  batch_inference_example.py  sample_engine_history.csv  sample_prediction.json
reports/aerokan_phm_critical_gate/: benchmark_fixed_policy_metrics.json  (+6 more)
requirements/: README.md  api.txt  constraints.txt  core.txt  dashboard.txt  dev.txt  monitoring.txt
scripts/: release_integrity_check.py  release_readiness_audit.py  run_monitoring_demo.py  validate_readme.py
(+238 files in other folders)
